--- a/SistemaLoja/SistemaLoja/Views/Account/Login.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Account/Login.cshtml
@@ -44,10 +44,10 @@
                 <p>
                     @Html.ActionLink("Register as a new user", "Register")
                 </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
+                //Habilitar recuperação de senha no Login
                     <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
+                        @Html.ActionLink("Recuperar Senha?", "ForgotPassword")
+                    </p>
             }
         </section>
     </div>
