MODIFICACOES NAS PAGINAS, UTILIZANDO BOOTSTRAP

--- a/SistemaLoja/SistemaLoja/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
+    ViewBag.Title = "Alterar Senha";
 }
 
 <hgroup class="title">
@@ -7,7 +7,7 @@
 </hgroup>
 <div>
     <p>
-        Please check your email to reset your password.
+        Verifique seu email para alterar a senha.
     </p>
 </div>
 	
