--- a/SistemaLoja/SistemaLoja/Views/Categoria/Index.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Categoria/Index.cshtml
@@ -3,228 +3,304 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Categorias</h2>
+<h3>Categorias</h3> <br /><br />
 
 @using (Html.BeginForm())
 {
-    <button id="btnGetCategorias">Buscar Categorias</button>
-    <button id="btnGetCategoria">Buscar Categoria</button>
-    <button id="btnAddCategorias">ADD Categorias</button>
-    <button id="btnUpdateCategorias">Editar Categorias</button>
-    <button id="btnDeleteCategorias">Deletar Categorias</button>
+    <div class="row">
+        <div class="form-group col-md-2">
+            <button id="btnGetCategorias" class="btn btn-success"> <i class="glyphicon glyphicon-th-list"> </i>&nbsp; Ver Categorias</button>
+        </div>
+        <div class="form-group col-md-2">
+            <button id="btnGetCategoria" class="btn btn-info"> <i class="glyphicon glyphicon-search"> </i>&nbsp;Buscar Categoria</button>
+        </div>
+        <div class="form-group col-md-2">
+            <button id="btnAddCategorias" class="btn btn-default"><i class="glyphicon glyphicon-plus"> </i>&nbsp;ADD Categorias</button>
+        </div>
+        <div class="form-group col-md-2">
+            <button id="btnUpdateCategorias" class="btn btn-info"><i class="glyphicon glyphicon-pencil"> </i>&nbsp;Editar Categorias</button>
+        </div>
+        <div class="form-group col-md-2">
+            <button id="btnDeleteCategorias" class="btn btn-danger"><i class="glyphicon glyphicon-trash"> </i>&nbsp;Deletar Categorias</button>
+        </div>
+    </div>
+
+    <div class="col-xs-4 col-sm-4 col-md-12 col-lg-12">
+        <br /><br />
+    </div>
+
+    <div class="col-lg-2">
+        <input id="txtCategoriaId" class="form-control" Type="text" placeholder="Id Categoria" />
+    </div>
+    <div class="col-lg-4">
+        <input id="txtDescricao" class="form-control" Type="text" placeholder="Descrição" />
+    </div>
+
+    <div id="lblMensagem" class="text-danger alert-link alert-dismissable"></div>
+
     <br /><br />
-
-    <input id="txtCategoriaId" Type="text" placeholder="Id Categoria" />
-    <input id="txtDescricao" Type="text" placeholder="Descrição" />
-
-    <br /><br />
-
-    <div id="lblMensagem"></div>
-
 }
 
 @section Scripts{
     <script type="text/javascript">
-    $(function () {
-        $("#btnGetCategorias").on("click", function () {
+        $(function () {
+            $("#btnGetCategorias").on("click", function () {
 
-            $.ajax({
-                type: 'GET',
-                url: '/api/CategoriaAPI',
-                datatype: 'json',
-                cache: false,
-            })
+                $.ajax({
+                    type: 'GET',
+                    url: '/api/CategoriaAPI',
+                    datatype: 'json',
+                    cache: false,
+                })
 
+                    .success(function (data) {
+                        var saida = '';
 
-            .success(function (data) {
-                var saida = '';
-                for (var i = 0; i < data.length; i++) {
-                    saida += '<hr><br>';
-                    saida += '<b>Categoria ID: </b>' + data[i].CategoriaId + '<br>';
-                    saida += '<b>Descrição: </b>' + data[i].Descricao + '<br>';
+                        saida += '<table class="table">';
+                        saida += '<thread>';
+                        saida += '<tr>';
+                        saida += '<th>Categoria ID</th>';
+                        saida += '<th>Descrição</th>';
+                        saida += '</tr>';
+                        saida += '</thread>';
+                        saida += '<tbody>';
+                        saida += '<tr>';
+                        for (var i = 0; i < data.length; i++) {
+
+                            saida += '<td class="">' + data[i].CategoriaId + '</td>';
+                            saida += '<td>' + data[i].Descricao + '</td>';
+                            saida += '</tr>';
+                        }
+
+                        saida += '</tbody>';
+                        saida += '</table>';
+
+                        $("#lblMensagem").html(saida);
+                    })
+
+                    .error(function (xhr, ajaxOptions, throwError) {
+                        $("#lblMensagem").html("Ocorreu um Erro");
+
+                    });
+                return false;
+            });
+
+            $("#btnGetCategoria").on("click", function () {
+
+                var categoriaId = $('#txtCategoriaId').val();
+                if (categoriaId == "") {
+                    $("#lblMensagem").html("É preciso informar um ID para Categoria");
+                    return false;
                 }
-                $("#lblMensagem").html(saida);
-              })
 
-             .error(function (xhr, ajaxOptions, throwError) {
-               $("#lblMensagem").html("Ocorreu um Erro");
+                $.ajax({
+                    type: 'GET',
+                    url: '/api/CategoriaAPI/' + categoriaId,
+                    datatype: 'json',
+                    cache: false,
+                })
+                    .success(function (data) {
+                        if (data != null) {
+                            var saida = '';
 
-             });
-            return false;
-        });
+                            saida += '<table class="table">';
+                            saida += '<thread>';
+                            saida += '<tr>';
+                            saida += '<th>Categoria ID</th>';
+                            saida += '<th>Descrição</th>';
+                            saida += '</tr>';
+                            saida += '</thread>';
+                            saida += '<tbody>';
+                            saida += '<tr>';
 
-        $("#btnGetCategoria").on("click", function () {
 
-            var categoriaId = $('#txtCategoriaId').val();
-            if (categoriaId == "") {
-                $("#lblMensagem").html("É preciso informar um ID para Categoria");
+                            saida += '<td class="">' + data.CategoriaId + '</td>';
+                            saida += '<td>' + data.Descricao + '</td>';
+                            saida += '</tr>';
+
+
+                            saida += '</tbody>';
+                            saida += '</table>';
+
+                            $("#lblMensagem").html(saida);
+                        } else {
+                            $("#lblMensagem").html("Esta categoria não existe");
+                        }
+                    })
+
+                    .error(function (xhr, ajaxOptions, throwError) {
+                        $("#lblMensagem").html("Ocorreu um Erro");
+
+                    });
                 return false;
-            }
-
-            $.ajax({
-                type: 'GET',
-                url: '/api/CategoriaAPI/' + categoriaId,
-                datatype: 'json',
-                cache: false,
-            })
-
-
-           .success(function (data) {
-               if(data != null){
-               var saida = '';
-              
-                   saida += '<hr><br>';
-                   saida += '<b>Categoria ID: </b>' + data.CategoriaId + '<br>';
-                   saida += '<b>Descrição: </b>' + data.Descricao + '<br>';
-               
-                   $("#lblMensagem").html(saida);
-               } else {
-                   $("#lblMensagem").html("Esta categoria não existe");
-               }
-           })
-
-            .error(function (xhr, ajaxOptions, throwError) {
-                $("#lblMensagem").html("Ocorreu um Erro");
-
-            });
-            return false;
-        });
-
-        $("#btnAddCategorias").on("click", function () {
-
-            var descricao = $('#txtDescricao').val();
-            if (descricao == "") {
-                $("#lblMensagem").html("É preciso informar a descrição!");
-                return false;
-            }
-
-            var categoria = { Descricao: descricao }
-
-            $.ajax({
-                type: 'POST',
-                url: '/api/CategoriaAPI/',
-                data: categoria,
-                datatype: 'json',
-                cache: false,
-            })
-
-
-           .success(function (data) {
-            
-                   var saida = '';
-
-                   saida += '<hr>Categoria Adicionada <br>';
-                   saida += '<b>Categoria ID: </b>' + data.CategoriaId + '<br>';
-                   saida += '<b>Descrição: </b>' + data.Descricao + '<br>';
-
-                   $("#lblMensagem").html(saida);
-              
-           })
-
-            .error(function (xhr, ajaxOptions, throwError) {
-                $("#lblMensagem").html("Ocorreu um Erro");
-
             });
 
-            return false;
-        });
+            $("#btnAddCategorias").on("click", function () {
 
-        $("#btnUpdateCategorias").on("click", function () {
+                var descricao = $('#txtDescricao').val();
+                if (descricao == "") {
+                    $("#lblMensagem").html("É preciso informar a descrição!");
+                    return false;
+                }
 
-            var descricao = $('#txtDescricao').val();
-            if (descricao == "") {
-                $("#lblMensagem").html("É preciso informar a descrição!");
+                var categoria = { Descricao: descricao }
+
+                $.ajax({
+                    type: 'POST',
+                    url: '/api/CategoriaAPI/',
+                    data: categoria,
+                    datatype: 'json',
+                    cache: false,
+                })
+
+
+                    .success(function (data) {
+
+                        var saida = '';
+                        saida += '<hr>Categoria adicionada com sucesso!!<br><br><br>';
+                        saida += '<table class="table">';
+                        saida += '<thread>';
+                        saida += '<tr>';
+                        saida += '<th>Categoria ID</th>';
+                        saida += '<th>Descrição</th>';
+                        saida += '</tr>';
+                        saida += '</thread>';
+                        saida += '<tbody>';
+                        saida += '<tr>';
+
+
+                        saida += '<td class="">' + data.CategoriaId + '</td>';
+                        saida += '<td>' + data.Descricao + '</td>';
+                        saida += '</tr>';
+
+                        saida += '</tbody>';
+                        saida += '</table>';
+
+                        $("#lblMensagem").html(saida);
+
+                    })
+
+                    .error(function (xhr, ajaxOptions, throwError) {
+                        $("#lblMensagem").html("Ocorreu um Erro");
+
+                    });
+
                 return false;
-            }
-
-            var categoriaId = $('#txtCategoriaId').val();
-            if (categoriaId == "") {
-                $("#lblMensagem").html("É preciso informar um ID para Categoria");
-                return false;
-            }
-
-            var categoria = { CategoriaId: categoriaId, Descricao: descricao }
-
-            $.ajax({
-                type: 'PUT',
-                url: '/api/CategoriaAPI/' + categoriaId,
-                data: categoria,
-                datatype: 'json',
-                cache: false,
-            })
-
-
-           .success(function (data) {
-
-               var saida = '';
-
-               saida += '<hr>Categoria Editada com Sucesso <br>';
-               
-
-               $("#lblMensagem").html(saida);
-
-           })
-
-            .error(function (xhr, ajaxOptions, throwError) {
-                $("#lblMensagem").html("Ocorreu um Erro");
-
             });
 
+            $("#btnUpdateCategorias").on("click", function () {
 
-            return false;
-        });
+                var descricao = $('#txtDescricao').val();
+                if (descricao == "") {
+                    $("#lblMensagem").html("É preciso informar a descrição!");
+                    return false;
+                }
 
-        $("#btnDeleteCategorias").on("click", function () {
+                var categoriaId = $('#txtCategoriaId').val();
+                if (categoriaId == "") {
+                    $("#lblMensagem").html("É preciso informar um ID para Categoria");
+                    return false;
+                }
+
+                var categoria = { CategoriaId: categoriaId, Descricao: descricao }
+
+                $.ajax({
+                    type: 'PUT',
+                    url: '/api/CategoriaAPI/' + categoriaId,
+                    data: categoria,
+                    datatype: 'json',
+                    cache: false,
+                })
 
 
-            var categoriaId = $('#txtCategoriaId').val();
-            if (categoriaId == "") {
-                $("#lblMensagem").html("É preciso informar um ID para Categoria");
+                    .success(function (data)
+                    {
+                        var saida = '';
+                        saida += '<hr>Categoria Editada com Sucesso <br>';
+
+                        $("#lblMensagem").html(saida);
+
+                    })
+
+                    .error(function (xhr, ajaxOptions, throwError) {
+                        $("#lblMensagem").html("Ocorreu um Erro");
+
+                    });
+
+
                 return false;
-            }
-
-            $.ajax({
-                type: 'DELETE',
-                url: '/api/CategoriaAPI/' + categoriaId,
-                datatype: 'json',
-                cache: false,
-            })
-
-
-           .success(function (data) {
-               if (data != null) {
-                   var saida = '';
-
-                   saida += '<hr>Categoria excluida com sucesso!!<br>';
-                   saida += '<b>Categoria ID: </b>' + data.CategoriaId + '<br>';
-                   saida += '<b>Descrição: </b>' + data.Descricao + '<br>';
-
-                   $("#lblMensagem").html(saida);
-               } else {
-                   $("#lblMensagem").html("Esta categoria não existe");
-               }
-           })
-
-            .error(function (xhr, ajaxOptions, throwError) {
-                $("#lblMensagem").html("Ocorreu um Erro");
-
             });
 
-            return false;
-        });
+            $("#btnDeleteCategorias").on("click", function () {
 
-        $(document).ajaxStart(function () {
-            $("#loading").show();
-        });
 
-        $(document).ajaxStop(function () {
-            $("#loading").hide();
-        });
+                var categoriaId = $('#txtCategoriaId').val();
+                if (categoriaId == "") {
+                    $("#lblMensagem").html("É preciso informar um ID para Categoria");
+                    return false;
+                }
 
-    });
+                $.ajax({
+                    type: 'DELETE',
+                    url: '/api/CategoriaAPI/' + categoriaId,
+                    datatype: 'json',
+                    cache: false,
+                })
+
+
+                    .success(function (data) {
+                        if (data != null) {
+                            var saida = '';
+
+                            saida += '<hr>Categoria excluida com sucesso!!<br><br><br>';
+
+
+                            saida += '<table class="table">';
+                            saida += '<thread>';
+                            saida += '<tr>';
+                            saida += '<th>Categoria ID</th>';
+                            saida += '<th>Descrição</th>';
+                            saida += '</tr>';
+                            saida += '</thread>';
+                            saida += '<tbody>';
+                            saida += '<tr>';
+
+
+                            saida += '<td class="">' + data.CategoriaId + '</td>';
+                            saida += '<td>' + data.Descricao + '</td>';
+                            saida += '</tr>';
+
+
+                            saida += '</tbody>';
+                            saida += '</table>';
+
+
+                            $("#lblMensagem").html(saida);
+                        } else {
+                            $("#lblMensagem").html("Esta categoria não existe");
+                        }
+                    })
+
+                    .error(function (xhr, ajaxOptions, throwError) {
+                        $("#lblMensagem").html("Ocorreu um Erro");
+
+                    });
+
+                return false;
+            });
+
+            $(document).ajaxStart(function () {
+                $("#loading").show();
+            });
+
+            $(document).ajaxStop(function () {
+                $("#loading").hide();
+            });
+
+        });
     </script>
 
-    }
+}
 
 <style type="text/css">
     #loading {
