--- a/SistemaLoja/SistemaLoja/Views/Fornecedor/Index.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Fornecedor/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<SistemaLoja.Models.Fornecedor>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Fornecedores";
 }
 
-<h2>Index</h2>
+<h2>Lista de Fornecedores</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Novo Fornecedor", "Create", null, new { @class = "btn btn-success" })
 </p>
 <table class="table">
     <tr>
@@ -47,9 +47,9 @@
             @Html.DisplayFor(modelItem => item.Email)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.FornecedorId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.FornecedorId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.FornecedorId })
+            @Html.ActionLink("Editar", "Edit", new { id=item.FornecedorId }, new { @class = "btn btn-warning" }) |
+            @Html.ActionLink("Detalhes", "Details", new { id=item.FornecedorId }, new { @class = "btn btn-info" }) |
+            @Html.ActionLink("Deletar", "Delete", new { id=item.FornecedorId }, new { @class = "btn btn-danger" })
         </td>
     </tr>
 }
