--- a/SistemaLoja/SistemaLoja/Views/Funcionario/Index.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Funcionario/Index.cshtml
@@ -1,13 +1,14 @@
 ﻿@model IEnumerable<SistemaLoja.Models.Funcionario>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Funcionário";
 }
 
-<h2>Index</h2>
+<h2>Lista de Funcionários</h2>
+
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Novo Produto", "Create", null, new { @class = "btn btn-success" })
 </p>
 <table class="table">
     <tr>
@@ -41,41 +42,42 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.TipoDocumento.Descricao)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Sobrenome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Salario)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Comissao)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nascimento)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cadastro)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Idade)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.FuncionarioId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.FuncionarioId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.FuncionarioId })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.TipoDocumento.Descricao)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nome)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Sobrenome)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Salario)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Comissao)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nascimento)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cadastro)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Idade)
+            </td>
+            <td>
+                @Html.ActionLink("Editar", "Edit", new { id = item.FuncionarioId }, new { @class = "btn btn-warning" }) |
+                @Html.ActionLink("Detalhes", "Details", new { id = item.FuncionarioId }, new { @class = "btn btn-info" })|
+                @Html.ActionLink("Deletar", "Delete", new { id = item.FuncionarioId }, new { @class = "btn btn-danger" })
+            </td>
+        </tr>
+    }
 
 </table>
