--- a/SistemaLoja/SistemaLoja/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
-    ViewBag.Title = "Reset password confirmation";
+    ViewBag.Title = "Senha alterada com sucesso";
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h2>@ViewBag.Title</h2>
 </hgroup>
 <div>
     <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Sua senha foi modificada. Favor @Html.ActionLink("clicar aqui para fazer o login", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
