--- a/SistemaLoja/SistemaLoja/Views/Categoria/Create.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Categoria/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SistemaLoja.Models.Categoria
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Cadastrar Produto";
 }
 
-<h2>Create</h2>
+<h2>Cadastrar Produto</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -23,8 +23,8 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-md-offset-2 col-md-2">
+                <button class="btn btn-success"> <i class="glyphicon glyphicon-floppy-save"> </i>&nbsp; Salvar</button>
             </div>
         </div>
     </div>
