--- a/SistemaLoja/SistemaLoja/Views/Categoria/Delete.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Categoria/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Deseja realmente deletar uma categoria?</h3>
 <div>
     <h4>Categoria</h4>
     <hr />
@@ -24,9 +24,9 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+    <div class="form-actions no-color">
+        <button class="btn btn-danger"> <i class="glyphicon glyphicon-trash"> </i>&nbsp; Deletar</button>
+        @Html.ActionLink("Voltar", "Index")
+    </div>
     }
 </div>
