--- a/SistemaLoja/SistemaLoja/Views/Fornecedor/Delete.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Fornecedor/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model SistemaLoja.Models.Fornecedor
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Deletar";
 }
 
-<h2>Delete</h2>
+@*<h2>Deletar Fornecedor</h2>*@
 
-<h3>Are you sure you want to delete this?</h3>
+<h2>Deseja realmente deletar um Fornecedor?</h2>
 <div>
-    <h4>Fornecedor</h4>
+    @*<h4>Fornecedor</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -57,8 +57,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <button class="btn btn-danger"> <i class="glyphicon glyphicon-trash"> </i>&nbsp; Deletar</button> |
+            @Html.ActionLink("Voltar", "Index")
         </div>
     }
 </div>
