--- a/SistemaLoja/SistemaLoja/Views/Fornecedor/Details.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Fornecedor/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model SistemaLoja.Models.Fornecedor
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalhes do Fornecedor";
 }
 
-<h2>Details</h2>
+<h2>Detalhes do Fornecedor -  @Html.DisplayFor(model => model.Nome)</h2>
 
 <div>
-    <h4>Fornecedor</h4>
+    @*<h4>Fornecedor</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -53,6 +53,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.FornecedorId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.FornecedorId }, new { @class = "btn btn-warning" }) |
+    @Html.ActionLink("Voltar", "Index")
 </p>
