--- a/SistemaLoja/SistemaLoja/Views/Fornecedor/Edit.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Fornecedor/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SistemaLoja.Models.Fornecedor
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar Fornecedor";
 }
 
-<h2>Edit</h2>
+<h3>Editar</h3>
 
 
 @using (Html.BeginForm())
@@ -59,14 +59,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-warning" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index")
 </div>
 
 @section Scripts {
