--- a/SistemaLoja/SistemaLoja/Views/Funcionario/Create.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Funcionario/Create.cshtml
@@ -1,18 +1,19 @@
 ﻿@model SistemaLoja.Models.Funcionario
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Cadastro do Funcionário";
 }
 
-<h2>Create</h2>
+<h3>Cadastro de Funcionário</h3>
 
 
-@using (Html.BeginForm()) 
+
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Funcionario</h4>
+        @*<h4>Funcionario</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -81,14 +82,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <button class="btn btn-success"> <i class="glyphicon glyphicon-floppy-save"> </i>&nbsp; Cadastrar</button>
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index")
 </div>
 
 @section Scripts {
