--- a/SistemaLoja/SistemaLoja/Views/Funcionario/Delete.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Funcionario/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Deseja realmente deletar o Funcionário?</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Funcionario</h4>
+    @*<h4>Funcionario</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -77,12 +76,13 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+    <div class="form-actions no-color">
+        <button class="btn btn-danger"> <i class="glyphicon glyphicon-trash"> </i>&nbsp; Deletar</button> |
+        @Html.ActionLink("Voltar", "Index")
+    </div>
     }
 </div>
