--- a/SistemaLoja/SistemaLoja/Views/Produto/Create.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Produto/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SistemaLoja.Models.Produto
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Cadastrar Produto";
 }
 
-<h2>Create</h2>
+<h3>Cadastro de Produtos</h3>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Produto</h4>
+        @*<h4>Produto</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -57,14 +57,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <button class="btn btn-success"> <i class="glyphicon glyphicon-floppy-save"> </i>&nbsp; Cadastrar</button>
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index")
 </div>
 
 @section Scripts {
