--- a/SistemaLoja/SistemaLoja/Views/Produto/Delete.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Produto/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model SistemaLoja.Models.Produto
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Deletar";
 }
 
-<h2>Delete</h2>
+@*<h2>Deletar</h2>*@
 
-<h3>Are you sure you want to delete this?</h3>
+<h2>Deseja realmente deletar o Produto?</h2>
 <div>
-    <h4>Produto</h4>
+    @*<h4>Produto</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -56,9 +56,9 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+    <div class="form-actions no-color">
+        <button class="btn btn-danger"> <i class="glyphicon glyphicon-trash"> </i>&nbsp; Deletar</button> |
+        @Html.ActionLink("Voltar", "Index")
+    </div>
     }
 </div>
