--- a/SistemaLoja/SistemaLoja/Views/Produto/Edit.cshtml
+++ b/SistemaLoja/SistemaLoja/Views/Produto/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SistemaLoja.Models.Produto
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar Produto";
 }
 
-<h2>Edit</h2>
+<h3>Editar Produto</h3>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Produto</h4>
+        @*<h4>Produto</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ProdutoId)
@@ -59,14 +59,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <button class="btn btn-warning"> <i class="glyphicon glyphicon-pencil"> </i>&nbsp; Salvar</button>
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar", "Index")
 </div>
 
 @section Scripts {
